[BH-60] Visibility issue here with too much text - should we reduce font size when it get's too much?

--- a/src/styles/04_base/_base.typography.scss
+++ b/src/styles/04_base/_base.typography.scss
@@ -38,7 +38,10 @@ p {
 		@include fzlh(14px, 18px);
 	}
 	.lead {
-		@include fzlh(24px, 32px);
+		@include fzlh(22px, 26px);
+		@include mq(sm) {
+			@include fzlh(24px, 32px);
+		}
 		letter-spacing: -.3px;
 	}
 	.b-fsnav {
